--- a/Lab4/Worksheet.ipynb
+++ b/Lab4/Worksheet.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "bab2e72b-be6d-4cae-9ca3-d91f81fc87ec",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(stack\u001b[38;5;241m.\u001b[39mpop())\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mResult stack:\u001b[39m\u001b[38;5;124m'\u001b[39m, stack)\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStack after poppint one more:\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mstack\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m) \u001b[38;5;66;03m#ERROR :)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[4], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(stack\u001b[38;5;241m.\u001b[39mpop())\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mResult stack:\u001b[39m\u001b[38;5;124m'\u001b[39m, stack)\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStack after poppint one more:\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mstack\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m) \u001b[38;5;66;03m#ERROR :)\u001b[39;00m\n",
       "\u001b[1;31mIndexError\u001b[0m: pop from an empty deque"
      ]
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "564d596c-3c1b-4a86-a46c-5f29fee8274b",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "db0c255b-39d0-4616-9cf1-2b2dda921a26",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "9f5972ad-7be3-4bb0-91df-3f3a6cfc27fa",
    "metadata": {},
    "outputs": [
@@ -251,16 +251,13 @@
      "output_type": "stream",
      "text": [
       "['#', '#', '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n",
-      "Queue already full\n",
-      "Queue already full\n",
-      "['#', '#', '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n",
-      "first #\n",
-      "['#', '#', '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n",
-      "[3, '#', '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n",
-      "Queue already full\n",
-      "[3, '#', '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n",
-      "next first #\n",
-      "[3, '#', '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n"
+      "[1, 2, '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n",
+      "first 1\n",
+      "['#', 2, '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n",
+      "['#', 2, 3, '#', '#', '#', '#', '#', '#', '#'] len 10\n",
+      "['#', 2, 3, 4, '#', '#', '#', '#', '#', '#'] len 10\n",
+      "next first 2\n",
+      "['#', '#', 3, 4, '#', '#', '#', '#', '#', '#'] len 10\n"
      ]
     }
    ],
@@ -292,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "187a1d1a-fded-4b66-94db-43b5d28e109b",
    "metadata": {},
    "outputs": [],
@@ -302,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "b08c7897-fb8e-421d-8b0e-96599d1abad5",
    "metadata": {},
    "outputs": [
