--- a/Lab4/Worksheet.ipynb
+++ b/Lab4/Worksheet.ipynb
@@ -118,17 +118,6 @@
       "a\n",
       "Result stack: deque([])\n"
      ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "pop from an empty deque",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(stack\u001b[38;5;241m.\u001b[39mpop())\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mResult stack:\u001b[39m\u001b[38;5;124m'\u001b[39m, stack)\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStack after poppint one more:\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mstack\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m) \u001b[38;5;66;03m#ERROR :)\u001b[39;00m\n",
-      "\u001b[1;31mIndexError\u001b[0m: pop from an empty deque"
-     ]
     }
    ],
    "source": [
@@ -147,7 +136,7 @@
     "print(stack.pop())\n",
     "\n",
     "print('Result stack:', stack)\n",
-    "print('Stack after poppint one more:', stack.pop()) #ERROR :)"
+    "# print('Stack after poppint one more:', stack.pop()) #ERROR :)"
    ]
   },
   {
@@ -168,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "564d596c-3c1b-4a86-a46c-5f29fee8274b",
    "metadata": {},
    "outputs": [
@@ -205,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "db0c255b-39d0-4616-9cf1-2b2dda921a26",
    "metadata": {},
    "outputs": [
@@ -242,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9f5972ad-7be3-4bb0-91df-3f3a6cfc27fa",
    "metadata": {},
    "outputs": [
@@ -263,6 +252,45 @@
    ],
    "source": [
     "cir_queue = CircledQueueArray()\n",
+    "print(cir_queue, 'len', len(cir_queue.set))\n",
+    "cir_queue.add(1)\n",
+    "cir_queue.add(2)\n",
+    "print(cir_queue, 'len', len(cir_queue.set))\n",
+    "first = cir_queue.get()\n",
+    "print('first', first)\n",
+    "print(cir_queue, 'len', len(cir_queue.set))\n",
+    "cir_queue.add(3)\n",
+    "print(cir_queue, 'len', len(cir_queue.set))\n",
+    "cir_queue.add(4)\n",
+    "print(cir_queue, 'len', len(cir_queue.set))\n",
+    "next_first = cir_queue.get()\n",
+    "print('next first', next_first)\n",
+    "print(cir_queue, 'len', len(cir_queue.set))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "50ebc905-cff8-4b59-b5e3-c7d70f8eb76a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#', '#', '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n",
+      "['#', '#', '#', '#', '#', '#', '#', '#', 1, 2] len 10\n",
+      "first 1\n",
+      "['#', '#', '#', '#', '#', '#', '#', '#', '#', 2] len 10\n",
+      "[3, '#', '#', '#', '#', '#', '#', '#', '#', 2] len 10\n",
+      "[3, 4, '#', '#', '#', '#', '#', '#', '#', 2] len 10\n",
+      "next first 2\n",
+      "[3, 4, '#', '#', '#', '#', '#', '#', '#', '#'] len 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "cir_queue = CircledQueueArray(length=10, head_index=8)\n",
     "print(cir_queue, 'len', len(cir_queue.set))\n",
     "cir_queue.add(1)\n",
     "cir_queue.add(2)\n",
